--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -2,11 +2,11 @@
   <div class="row">
   {{#each courses}}
     <div class="col-sm-6 col-lg-3">
-      <div class="card" >
+      <div class="card vh-20"  >
         <a href="/courses/{{this.slug}}">
         <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}" />
         </a>
-        <div class="card-body">
+        <div class="card-body ">
           <a href="/courses/{{this.slug}}">
           <h5 class="card-title">{{this.name}}</h5>
           </a>
